[tool.poetry]
authors = ["Daniel Schmidt <danischm@cisco.com>"]
description = "A CLI tool to perform a pre-change validation on Nexus Dashboard Insights or Network Assurance Engine."
documentation = "https://github.com/netascode/nexus-pcv"
homepage = "https://github.com/netascode/nexus-pcv"
license = "LICENSE"
maintainers = ["Daniel Schmidt <danischm@cisco.com>"]
name = "nexus-pcv"
readme = "README.md"
repository = "https://github.com/netascode/nexus-pcv"
version = "0.2.1"

[tool.poetry.scripts]
nexus-pcv = "nexus_pcv.cli.main:main"

[tool.poetry.dependencies]
click = "^8.1.3"
errorhandler = "^2.0.1"
python = "^3.8"
pyyaml = "^6.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.6"
types-pyyaml = "^6.0.12.20240724"
types-requests = "^2.32.0.20240712"

[tool.coverage.run]
source = ["nexus_pcv"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = 3.8
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core"]
