[project]
name = "nexus-pcv"
version = "0.2.1"
description = "A CLI tool to perform a pre-change validation on Nexus Dashboard Insights or Network Assurance Engine."
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Schmidt", email = "danischm@cisco.com" },
]
maintainers = [
    { name = "Daniel Schmidt", email = "danischm@cisco.com" },
]
dependencies = [
    "typer>=0.15",
    "pyyaml>=6.0.2",
    "requests>=2.32",
]

[project.urls]
homepage = "https://github.com/netascode/nexus-pcv"
repository = "https://github.com/netascode/nexus-pcv"
documentation = "https://github.com/netascode/nexus-pcv"

[project.scripts]
nexus-pcv = "nexus_pcv.cli.main:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.17",
    "pre-commit>=4.0",
    "pytest>=8.4",
    "pytest-cov>=6.0",
    "pytest-mock>=3.15",
    "ruff>=0.12",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]

[tool.coverage.run]
source = ["nexus_pcv"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = "3.13"
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
